--- a/app/src/main/res/layout/items_store.xml
+++ b/app/src/main/res/layout/items_store.xml
@@ -52,24 +52,31 @@
 
                 <TextView
                     android:id="@+id/tv_mtd_qty"
-                    android:layout_width="96dp"
+                    android:layout_width="86dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:padding="4dp"
+                    android:paddingLeft="4dp"
                     android:textColor="@color/colorBlack"
                     android:textSize="14sp"
                     tools:text="3" />
 
                 <TextView
                     android:id="@+id/tv_mtd_nett"
-                    android:layout_width="242dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:textColor="@color/colorBlack"
                     android:textSize="14sp"
-                    tools:text="123.4" />
+                    tools:text="1,500,000,000" />
 
-
+                <TextView
+                    android:id="@+id/tv_mtd_avg"
+                    android:layout_width="136dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="14sp"
+                    tools:text="390,000" />
             </LinearLayout>
 
         </LinearLayout>
